# math_research

./: .gitignore  CLAUDE.md  LICENSE  README.md  Taskfile.yaml  pyproject.toml
docs/: CODING_GUIDELINES.md  PLANNING.md  architecture.md
docs/tmp/: consciousness.md
src/math_research/: __init__.py
src/math_research/core/: __init__.py  types.py
tests/: test_core_properties.py  test_core_types.py
